<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BackgroundColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.results.ResultsFragment">

    <TextView
        android:id="@+id/resultsTitle"
        style="@style/TextColorWhite.toolbarHeader"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/results"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/resultsBackButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="7dp"
        android:contentDescription="@string/backButtonContentDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <ImageView
        android:id="@+id/resultsShare"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/homeButtonContentDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/round_share_white_36dp" />

    <TextView
        android:id="@+id/name"
        style="@style/TextColorWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultsTitle" />

    <TextView
        android:id="@+id/score"
        style="@style/TextColorWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultsTitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_results"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:listitem="@layout/design_result" />

</androidx.constraintlayout.widget.ConstraintLayout>