<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BackgroundColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.questions.QuestionsFragment">

    <TextView
        android:id="@+id/questionsTitle"
        style="@style/TextColorWhite.toolbarHeader"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/questions"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/questionsBackButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="7dp"
        android:contentDescription="@string/backButtonContentDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <ImageView
        android:id="@+id/questionsHomepage"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/homeButtonContentDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/board"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionsTitle">

        <TextView
            android:id="@+id/question"
            style="@style/TextColorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="40dp"
            android:maxLines="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
            android:checkedButton="@+id/radio_button_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question">

            <RadioButton
                android:id="@+id/answer_1"
                style="@style/TextColorWhite"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="3" />

            <RadioButton
                android:id="@+id/answer_2"
                style="@style/TextColorWhite"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="3" />

            <RadioButton
                android:id="@+id/answer_3"
                style="@style/TextColorWhite"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="3" />

            <RadioButton
                android:id="@+id/answer_4"
                style="@style/TextColorWhite"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="3" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/nextButton"
        style="@style/ButtonColor"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/nextButtonText"
            style="@style/TextColorWhite.button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_question" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>